Touch support added; Overflow fixed;

--- a/client/app/common/common.scss
+++ b/client/app/common/common.scss
@@ -10,6 +10,7 @@ $darkTextColor: #212121;
 
 body {
   line-height: 1;
+  overflow: hidden;
 }
 
 /*RESET CSS*/
